--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,1 +1,10 @@
-
+name: eric
+on: push
+jobs: 
+  hello-eric:
+    runs-on: ubuntu-latest
+    steps:
+      - name: check out repository code
+        uses: actions/checkout@v3
+      - run: echo "$(cat hello_world.txt)"
+    
